examples/test/testpolicy10595.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10595
  namespace: namespace236
spec:
  podSelector:
    matchLabels:
      key0: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value14
          key17: value8
          key41: value6
      podSelector:
        matchLabels:
          key24: value3
          key8: value29
